--- a/Khamidov platformasi/index.html
+++ b/Khamidov platformasi/index.html
@@ -422,23 +422,23 @@
 
 
     <div class="social-links">
-        <a href="https://t.me/KhamidovAcademy" class="social-link" target="_blank">
+        <a href="https://t.me/Kelajakka_Yuksalish" class="social-link" target="_blank">
             <img src="./icon/telegramm_logo.png" alt="Telegramm" class="social-logo">
             <span class="social-text">Telegramm</span>
         </a>
 
-        <a href="https://www.instagram.com/khamidov_academy?igsh=MTQ0czJvaWs2eTl1aw==" class="social-link"
+        <a href="https://www.instagram.com/bekmuhammad.dev/?utm_source=ig_web_button_share_sheet" class="social-link"
             target="_blank">
             <img src="./icon/instagramm_logo.png" alt="Instagram" class="social-logo">
             <span class="social-text">Instagram</span>
         </a>
 
-        <a href="https://github.com/Khamidov-online" class="social-link" target="_blank">
+        <a href="https://github.com/Bekmuhammad-Devoloper" class="social-link" target="_blank">
             <img src="./icon//github-logo.png" alt="GitHub" class="social-logo">
             <span class="social-text">GitHub</span>
         </a>
 
-        <a href="https://youtube.com/@khamidovacademy?si=PravUgcb8PJ_QoAM" class="social-link" target="_blank">
+        <a href="https://www.youtube.com/@Bekmuhammad-Devoloper" class="social-link" target="_blank">
             <img src="./icon//youtube-logo.png" alt="YouTube" class="social-logo">
             <span class="social-text">You Tube</span>
         </a>
